feat: config express

--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/julooch/projeto-api-nodejs/issues"
   },
-  "homepage": "https://github.com/julooch/projeto-api-nodejs#readme"
+  "homepage": "https://github.com/julooch/projeto-api-nodejs#readme",
+  "dependencies": {
+    "express": "^4.19.2"
+  }
 }
