--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/julooch/projeto-api-nodejs#readme",
   "dependencies": {
+    "consign": "^0.1.6",
     "express": "^4.19.2"
   },
   "devDependencies": {
