--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "body-parser": "^1.20.2",
     "consign": "^0.1.6",
     "express": "^4.19.2",
+    "moment": "^2.30.1",
     "mysql": "^2.18.1",
     "mysql2": "^3.11.0"
   },
